GPencil: Anti-aliasing is not disabled for the "pixel" effect #78153

Closed
opened 2020-06-23 10:49:17 +02:00 by andrai · 18 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]
In version 2.82, you could make pixel images without anti-aliasing. You can't do that here. What should I do?

Exact steps for others to reproduce the error
Creating a grease pencil
Creating an effect "Pixel" (size 5 px, 5 px)
Scene -> Grease Pencil -> Anti-Aliasing Threshold
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

Безымянный.png

Here is the old version:
image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] In version 2.82, you could make pixel images without anti-aliasing. You can't do that here. What should I do? **Exact steps for others to reproduce the error** Creating a grease pencil Creating an effect "Pixel" (size 5 px, 5 px) Scene -> Grease Pencil -> Anti-Aliasing Threshold [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] ![Безымянный.png](https://archive.blender.org/developer/F8638628/Безымянный.png) Here is the old version: ![image.png](https://archive.blender.org/developer/F8638904/image.png)
Author

Added subscriber: @andrai08888

Added subscriber: @andrai08888
Author

This comment was removed by @andrai08888

*This comment was removed by @andrai08888*

Added subscribers: @fclem, @antoniov

Added subscribers: @fclem, @antoniov

@fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right?

@fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right?
Antonio Vazquez changed title from Grease pencil anti-aliasing is not disabled for the "pixel" effect to GPencil: Anti-aliasing is not disabled for the "pixel" effect 2020-06-23 15:42:40 +02:00
Author

In #78153#963234, @antoniov wrote:
@fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right?

In previous versions of the program, in Preference - > Viewport there was an anti-aliasing item for Grease Pencil (I don't remember what it was called, but it seems to be " Grease Pencil Anti-Aliasing")

> In #78153#963234, @antoniov wrote: > @fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right? In previous versions of the program, in Preference - > Viewport there was an anti-aliasing item for Grease Pencil (I don't remember what it was called, but it seems to be " Grease Pencil Anti-Aliasing")
Author

In #78153#963234, @antoniov wrote:
@fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right?

sorry I made a mistake, here I downloaded the last version of the program:
image.png
Grease Pencil Multisampling. Where is this button now?

> In #78153#963234, @antoniov wrote: > @fclem I guess this is by design of the new Pixelate VFX and not related to Antialiasing, right? sorry I made a mistake, here I downloaded the last version of the program: ![image.png](https://archive.blender.org/developer/F8639083/image.png) Grease Pencil Multisampling. Where is this button now?

@andrai08888 In 2.83 you have two options.

This disable AA.

image.png

And the threshold parameter to change how works.

I have tested using the simplify and it looks the pixelate effect is what created this AA effect, not the antialiasing itself. The problem with the old Pixelate VFX was that it was wrong, so the current implementation is the right one.

@andrai08888 In 2.83 you have two options. This disable AA. ![image.png](https://archive.blender.org/developer/F8639080/image.png) And the threshold parameter to change how works. I have tested using the simplify and it looks the pixelate effect is what created this AA effect, not the antialiasing itself. The problem with the old Pixelate VFX was that it was wrong, so the current implementation is the right one.
Author

This disable AA.

it doesn't work :(
image.png

> This disable AA. it doesn't work :( ![image.png](https://archive.blender.org/developer/F8639103/image.png)
Author

I want to find "Grease Pencil Multisampling" and disable it.

I want to find "Grease Pencil Multisampling" and disable it.

As I explained you above, the antiliasing effect is not produced by AA, but by the Pixelate effect itself. If you disable AA in a stroke without Pixelate, you will see the diffference. The old Multisampling value in user prefs screen was removed because this is not used anymore.

As I explained you above, the antiliasing effect is not produced by AA, but by the Pixelate effect itself. If you disable AA in a stroke without Pixelate, you will see the diffference. The old Multisampling value in user prefs screen was removed because this is not used anymore.
Author

So you won't be able to make vector pixel-art in the new blender? :(
Sadly...

So you won't be able to make vector pixel-art in the new blender? :( Sadly...

We could add a checkbox or a sample parameter to use nearest neighbor for this effect.

@antoniov this should be very easy for you.

We could add a checkbox or a sample parameter to use nearest neighbor for this effect. @antoniov this should be very easy for you.
Author

that would be great. But because of one person it is unlikely to be added to the program

that would be great. But because of one person it is unlikely to be added to the program
Antonio Vazquez self-assigned this 2020-06-23 19:06:13 +02:00

@fclem yes, I will implement it.

@fclem yes, I will implement it.

This issue was referenced by 11a390e85e

This issue was referenced by 11a390e85e2b1358f2167d86490a1c9abec17ea6

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

The patch D8100 have been applied to master.

The patch [D8100](https://archive.blender.org/developer/D8100) have been applied to master.
Author

Yippee :3

Yippee :3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78153
No description provided.