GPencil: Implement antialiasing parameter to Pixel FX

Related to T78153

Differential Revision: https://developer.blender.org/D8100